# anjuta

./: autogen.sh  configure.in
libanjuta/: Makefile.am  anjuta-c-module.c  anjuta-c-plugin-factory.c  anjuta-plugin-manager.c  anjuta-plugin.c  anjuta-preferences.c  anjuta-utils.c
libanjuta/interfaces/: Makefile.am  ianjuta-buildable.vala  ianjuta-builder.vala  ianjuta-debug-manager.vala  ianjuta-debugger-breakpoint.vala  ianjuta-debugger-instruction.vala  ianjuta-debugger-memory.vala  ianjuta-debugger-register.vala  ianjuta-debugger-variable.vala  ianjuta-debugger.vala  ianjuta-document-manager.vala  ianjuta-document.vala  ianjuta-editor-assist.vala  ianjuta-editor-cell-style.vala  ianjuta-editor-cell.vala  ianjuta-editor-comment.vala  ianjuta-editor-convert.vala  ianjuta-editor-factory.vala  ianjuta-editor-folds.vala  ianjuta-editor-goto.vala  ianjuta-editor-hover.vala  ianjuta-editor-language.vala  ianjuta-editor-linemode.vala  ianjuta-editor-search.vala  ianjuta-editor-selection.vala  ianjuta-editor-tip.vala  ianjuta-editor-view.vala  ianjuta-editor-zoom.vala  ianjuta-editor.vala  ianjuta-environment.vala  ianjuta-file-loader.vala  ianjuta-file-manager.vala  ianjuta-file-savable.vala  ianjuta-file.vala  ianjuta-help.vala  ianjuta-indicable.vala  ianjuta-iterable-tree.vala  ianjuta-iterable.vala  ianjuta-language-support.vala  ianjuta-language.vala  (+21 more)
plugins/build-basic-autotools/: configuration-list.c  executer.c  plugin.c  plugin.h  program.c  program.h
plugins/class-gen/: plugin.c
plugins/cvs-plugin/: cvs-execute.c  plugin.c  plugin.h
plugins/debug-manager/: breakpoints.c  breakpoints.h  command.c  command.h  debug_tree.c  debug_tree.h  disassemble.c  disassemble.h  locals.c  locals.h  memory.c  memory.h  plugin.c  plugin.h  queue.c  queue.h  registers.c  registers.h  sharedlib.h  signals.h  sparse_view.c  stack_trace.c  stack_trace.h  start.c  start.h  threads.c  threads.h  utilities.c  utilities.h  variable.c  watch.c  watch.h
plugins/devhelp/: plugin.c  plugin.h
plugins/dir-project/: dir-project.c  plugin.c
plugins/document-manager/: action-callbacks.c  anjuta-bookmarks.c  anjuta-bookmarks.h  anjuta-docman.c  anjuta-docman.h  plugin.c  search-box.c
plugins/file-loader/: plugin.c
plugins/file-manager/: file-model.h  plugin.c
plugins/file-wizard/: file.c  file.h  plugin.c
plugins/gbf-am/: gbf-am-project.h  plugin.c
plugins/gbf-mkfile/: gbf-mkfile-project.c  plugin.c
plugins/gdb/: debugger.c  debugger.h  parser.h  plugin.c  utilities.c
plugins/git/: git-ui-utils.h  git-vcs-interface.h  plugin.h
plugins/glade/: anjuta-design-document.c  plugin.c
plugins/gtodo/: plugin.c
plugins/js-debugger/: debugger-js.c  plugin.c
plugins/language-manager/: plugin.c
plugins/language-support-cpp-java/: cpp-java-assist.c  cpp-java-assist.h  cpp-java-utils.c  cpp-java-utils.h  plugin.c  plugin.h
plugins/macro/: macro-util.c  (+4 more)
src/: action-callbacks.c  anjuta.c  main.c
(+65 files in other folders)
